--- a/Johna/assets/home.css
+++ b/Johna/assets/home.css
@@ -10,28 +10,34 @@ h1{
 }
 
 .navbar ul{
-        list-style-type: none;
-        background-color: lightblue;
-        padding: 0px;
-        margin: 0px;
-        overflow: hidden;
+    list-style-type: none;
+    background-color: lightblue;
+    padding: 0px;
+    margin: 0px;
+    overflow: hidden;
 }
-.navbar a{
+.navbar ul li a{
     color: white;
     text-decoration: none;
-    padding: 10px;
     display: block;
     text-align: center;
+    float: right;
+}
+
+.navbar ul li {
+    padding: 0 5px 0 5px;
+}
+
+#nav-title {
+    float: left;
 }
 .navbar a:hover{
     background-color: lightcyan;
 }
-.navbar li{
-    float: left;
-}
 
-button { background-color: pink;
-       font-size: 10px;
-       color: red; 
-       border-radius: 5px;
+button {
+    background-color: pink;
+    font-size: 10px;
+    color: red; 
+    border-radius: 5px;
 }
