--- a/Johna/assets/home.css
+++ b/Johna/assets/home.css
@@ -9,31 +9,42 @@ h1{
     text-align: center;
 }
 
-.navbar ul{
-    list-style-type: none;
+.navbar {
     background-color: lightblue;
-    padding: 0px;
-    margin: 0px;
     overflow: hidden;
 }
-.navbar ul li a{
-    color: white;
-    text-decoration: none;
-    display: block;
-    text-align: center;
-    float: right;
+
+.navbar ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
 .navbar ul li {
-    padding: 0 5px 0 5px;
+    float: right;
+    padding: 0 15px;
 }
 
 #nav-title {
     float: left;
+    color: white;
+    font-weight: bold;
+    padding: 15px;
 }
-.navbar a:hover{
+
+.navbar ul li a {
+    color: white;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    padding: 15px;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.navbar ul li a:hover {
     background-color: lightcyan;
 }
+
 
 button {
     background-color: pink;
